 * Fixed issue #3362: Ease searches in the log window (auto select text)
 * Fixed issue #3539: doesn't abort commit if user doesn't modify the template commit message
 * Fixed issue #1274: Allow log font to be used for LogListCtrl and FileListCtrl
   Needs to be enabled explicitly in TortoiseGit advanced settings using LogFontForFileListCtrl resp. LogFontForLogCtrl

= Release 2.10.0.2 =
Released: 2020-03-24

== Bug Fixes ==
 * Fixed issue #3557: TortoiseGitMerge 'Use this text block' not working
 * Fixed issue #3559: TortoiseGitMerge loses text selection when you open the context menu by right-clicking
 * Build with VS2019 16.4 again to circumvent code-gen-issues

= Release 2.10.0.1 =
Released: 2020-03-19

== Bug Fixes ==
 * Fixed issue #3525: LogDlg crashes on copying full log info
 * Fixes issue #3527: TGit always crashes when commiting an edit after opening the "Onto" dialog
 * LogDlg: Improve high contrast mode switching
 * Fixed issue #3535: `Show log ID instead of SHA-1` might cut of numbers
 * Fixed issue #3531: TortoiseGitMerge: the captured to clipboard text is two characters shorter than the selected
 * Fixed issue #3543: Push can't run TortoiseGitPlink.exe with Cygwin hack enabled
 * Fixed issue #3542: Commit many files not working with Cygwin hack enabled
 * Fixed issue #3524: Revision Graph very slow after update to 2.10.0.0
 * Fix possible crash on Git credential helper settings page
 * Fixed possible data races in sync dialog

= Release 2.10.0 =
Released: 2020-03-01

== Features ==
 * Fixed issue #3448: Revision Graph: Make direction of arrows configurable
 * Fixed issue #3263: Compare parent revision with working tree
 * Update Scintilla to 4.2.3
 * Update libgit2 to 0.99
 * Fixed issue #3481: Add Switch/Checkout to Tags and Refs in Revision Graph
 * TGitCache: Cache libgit2 config (reduce disk access)
 * The Setting "Use .mailmap" is now honored everywhere in TortoiseGit (e.g., TotoiseGitBlame, GitWCRev)