@@ -120,15 +120,5 @@ BOOL CSettings::OnInitDialog()
 	m_themeCallbackId = CTheme::Instance().RegisterThemeChangeCallback([this]() { CTheme::Instance().SetThemeForDialog(GetSafeHwnd(), CTheme::Instance().IsDarkTheme()); });
 
 	CTheme::Instance().SetThemeForDialog(GetSafeHwnd(), CTheme::Instance().IsDarkTheme());
-
-	// Apply configured system font
-	NONCLIENTMETRICS ncm;
-	ncm.cbSize = sizeof(ncm);
-	SystemParametersInfo(SPI_GETNONCLIENTMETRICS, ncm.cbSize, &ncm, 0);
-	LOGFONT lfDlgFont = ncm.lfMessageFont;
-	m_DlgFont.CreateFontIndirect(&lfDlgFont);
-	SetFont(&m_DlgFont, TRUE);
-	SendMessageToDescendants(WM_SETFONT, reinterpret_cast<WPARAM>(static_cast<HGDIOBJ>(m_DlgFont.GetSafeHandle())), MAKELPARAM(FALSE, 0), TRUE);
-
 	return bResult;
 }
