@@ -500,7 +500,6 @@ private:
 	int m_nPageTreeWidth;
 
 	bool m_bDark = false;
-	CFont m_DlgFont;
 
 // Static Properties
 private:
