@@ -21,6 +21,8 @@ Released: unreleased
  * Fixed issue #3539: doesn't abort commit if user doesn't modify the template commit message
  * Fixed issue #1274: Allow log font to be used for LogListCtrl and FileListCtrl
    Needs to be enabled explicitly in TortoiseGit advanced settings using LogFontForFileListCtrl resp. LogFontForLogCtrl
+ * Fixed issue #3233: Allow to use system log message font in TortoiseGit
+   Since choosing the right font in MFC with support for I18N fonts is not easy, this feature needs to be enabled in TortoiseGit advanced settings using UseMessageFont manually ATM.
 
 = Release 2.10.0.2 =
 Released: 2020-03-24
